--- a/style.css
+++ b/style.css
@@ -115,3 +115,8 @@ body{
 	padding: 15px;
 	background-color: #bdc3c7;
 }
+span.navbar-toggler-icon {
+    background-image: url(/mywork/menu.png);
+    width: 50px;
+    height: 50px;
+}
